# sg-ai-job-scout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
.streamlit/: config.toml
app/: Home.py  app.py
app/components/: charts.py  filters.py  metrics.py  pipeline_health.py
app/pages/: 10_Learning_Roadmap.py  11_Market_Pulse.py  1_Dashboard.py  2_Job_Explorer.py  3_Role_Taxonomy.py  4_Trends.py  5_Company_Leaderboard.py  6_Salary_Estimator.py  7_Skills_Gap.py  8_AI_Skills_Deep_Dive.py  9_Skills_Salary_Premium.py  _7_Skills_Gap.py
app/utils/: config.py  supabase_client.py
pipeline/: ai_skills_analyzer.py  backfill_unclassified.py  classifier.py  dedupe_classified_listings.py  reclassify_others.py  run_pipeline.py  skills_normalizer.py  snapshot.py
pipeline/scrapers/: base_scraper.py  jobstreet.py  mycareersfuture.py  nodeflair.py
sql/: schema.sql
sql/migrations/: 2026-04-27-classified-listings-uniqueness.sql
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/src/app/ai-skills/: page.tsx
web/src/app/companies/: page.tsx
web/src/app/jobs/: page.tsx
web/src/app/jobs-for-you/: page.tsx
web/src/app/learning-roadmap/: page.tsx
web/src/app/market-pulse/: page.tsx
web/src/components/: ai-skills-dashboard.tsx  app-shell.tsx  charts.tsx  company-leaderboard.tsx  job-explorer.tsx  jobs-for-you.tsx  learning-roadmap.tsx  market-pulse.tsx  role-insights.tsx  ui.tsx
web/src/lib/: constants.ts  data.ts  market.ts  types.ts
(+1 files in other folders)
